[package]
name = "rust_sketcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "impp2"
path = "src/main.rs"

[dependencies]
smallvec = "1.11"
flate2 = "1.0" 
frag_gene_scan_rs = { path = "./FragGeneScanRs" }
rustc-hash = "2.1.0"
dashmap = "6.1.0"
needletail = "0.7.2"
rayon = "1.11.0"
wyhash = "0.6.0"
petgraph = "0.6.5"
rand = "0.8.5"
ort = { version = "2.0.0-rc.9", features = ["coreml", "ndarray"] }
ndarray = "0.15"
anyhow = "1.0"
# Fast, low-memory FASTA/FASTQ parsing
seq_io = "0.3.4"

# The 10x Genomics Compacted de Bruijn Graph engine
# Note: Ensure you use the version compatible with your k-mer size
debruijn = "0.3.4" 

# Efficient bit manipulation for visited nodes/pruning
fastbit = "0.11.1"

# Required for debruijn and high-performance serialization
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[build]
rustflags = ["-C", "target-cpu=native"]